added result page

--- a/app/pages/schedule/schedule.html
+++ b/app/pages/schedule/schedule.html
@@ -6,24 +6,11 @@
 
     <ion-segment [(ngModel)]="segment" (ionChange)="updateSchedule()">
       <ion-segment-button value="all">
-        Mon
-      </ion-segment-button>
-      <ion-segment-button value="a">
-        Tue
-      </ion-segment-button>
-       <ion-segment-button value="as">
-        Wed
-      </ion-segment-button>
-       <ion-segment-button value="fs">
-        Thurs
-      </ion-segment-button>
-       <ion-segment-button value="fss">
-        Fri
+        Regular
       </ion-segment-button>
        <ion-segment-button value="favorites">
-       Sat
+      Arrear
       </ion-segment-button>
-      
     </ion-segment>
 
     <ion-buttons end>
