--- a/app/pages/timetable/timetable.html
+++ b/app/pages/timetable/timetable.html
@@ -11,23 +11,19 @@
     </button>
 
     <ion-segment [(ngModel)]="segment" (ionChange)="updateTimeTable()">
-      <ion-segment-button value="MONDAY">
-        Mon
+      <ion-segment-button value="Regular">
+        Regular
       </ion-segment-button>
-      <ion-segment-button value="TUESDAY">
-        Tue
+      <ion-segment-button value=" Arrear">
+        Arrear
       </ion-segment-button>
-       <ion-segment-button value="WEDNESDAY">
-        Wed
-      </ion-segment-button>
-             
     </ion-segment>
 
-    <ion-buttons end>
+    <!--<ion-buttons end>
       <button (click)="presentFilter()">
         <ion-icon ios="ios-options-outline" md="md-options"></ion-icon>
       </button>
-    </ion-buttons>
+    </ion-buttons>-->
   </ion-navbar>
 
   <ion-toolbar no-border-top>
@@ -40,55 +36,7 @@
 </ion-header>
 
 <ion-content>
- <ion-card>
-  <div class="mygradeS"><center><h2>S</h2></center></div>
-  <ion-card-content>
-    <ion-card-title>
-      XC9100 THEORY
-      </ion-card-title>
-    <p>
-      The most popular industrial group ever, and largely
-      responsible for bringing the music to a mass audience.
-    </p>
-  </ion-card-content>
- </ion-card>
-  
-  <ion-card>
-  <div class="mygradeA"><center><h2>A</h2></center></div>
-  <ion-card-content>
-    <ion-card-title>
-      XC9100 THEORY
-      </ion-card-title>
-    <p>
-      The most popular industrial group ever, and largely
-      responsible for bringing the music to a mass audience.
-    </p>
-  </ion-card-content>
-  </ion-card>
-  <ion-card>
-  <div class="mygradeB"><center><h2>B</h2></center></div>
-  <ion-card-content>
-    <ion-card-title>
-      XC9100 THEORY
-      </ion-card-title>
-    <p>
-      The most popular industrial group ever, and largely
-      responsible for bringing the music to a mass audience.
-    </p>
-  </ion-card-content>
-  </ion-card>
-  <ion-card>
-  <div class="mygradeC"><center><h2>C</h2></center></div>
-  <ion-card-content>
-    <ion-card-title>
-      XC9100 THEORY
-      </ion-card-title>
-    <p>
-      The most popular industrial group ever, and largely
-      responsible for bringing the music to a mass audience.
-    </p>
-  </ion-card-content>
-</ion-card>
+ <div>time table content come here..</div>
 
 
 </ion-content>
