--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -11,7 +11,7 @@
 
   <ion-list>
     <div class="logo">
-      <img src="https://acoe.annauniv.edu/student/images/logo.png">
+      <img src="img/aceologo.png">
     </div>
 
     <form #loginForm="ngForm" novalidate>
