--- a/app/pages/signup/signup.html
+++ b/app/pages/signup/signup.html
@@ -11,7 +11,7 @@
 
   <ion-list>
     <div class="logo">
-      <img src="img/appicon.svg">
+      <img src="img/aceologo.png">
     </div>
 
     <form #signupForm="ngForm" novalidate>
