--- a/app/pages/about/about.html
+++ b/app/pages/about/about.html
@@ -14,10 +14,10 @@
 
 <ion-content>
   <div class="about-header">
-    <img src="img/ionic-logo-white.svg">
+    <img src="img/aceologo.png">
   </div>
   <div padding class="about-info">
-    <h4>Ionic Conference</h4>
+    <h4>ACOE MOBILE APPLICATION</h4>
 
     <ion-list no-lines>
       <ion-item>
@@ -30,22 +30,18 @@
         <ion-icon name="pin" item-left></ion-icon>
         <ion-label>Location</ion-label>
         <ion-select>
-          <ion-option value="madison" selected>Madison, WI</ion-option>
-          <ion-option value="austin">Austin, TX</ion-option>
-          <ion-option value="chicago">Chicago, IL</ion-option>
-          <ion-option value="seattle">Seattle, WA</ion-option>
+          <ion-option value="madison" selected>Guindy, TN</ion-option>
+          <ion-option value="austin">Australia, TN</ion-option>
+          <ion-option value="chicago">Chicago, TN</ion-option>
+          <ion-option value="seattle">Seattle, TN</ion-option>
         </ion-select>
       </ion-item>
     </ion-list>
 
     <p>
-      The Ionic Conference is a one-day conference featuring talks from the
-      Ionic team. It is focused on Ionic applications being built with
-      Ionic 2. This includes migrating apps from Ionic 1 to Ionic 2,
-      Angular concepts, Webpack, Sass, and many other technologies used
-      in Ionic 2. Tickets are completely sold out, and we’re expecting
-      more than 1000 developers – making this the largest Ionic
-      conference ever!
+     Consequent to the restoration of the two tier Academic and Administrative System based on the Syndicate vide Resolution No.179.6.2,
+     the Office of the Additional Controller of Examinations, University Departments,Anna University was established with effect form 02.01.2007.
+     This office is carrying out the Examinations related activites for UG/PG programmes conducted in the University Departments of four campuses.
     </p>
   </div>
 </ion-content>
